[gd_scene load_steps=5 format=3 uid="uid://boqxlupec5yd1"]

[ext_resource type="Script" uid="uid://bkyjwa1nlb3d6" path="res://Ui/Lobby/pre_lobby.gd" id="1_1135d"]
[ext_resource type="PackedScene" uid="uid://c6ennwobbvjhx" path="res://Ui/Lobby/lobby_creator.tscn" id="3_4es5y"]
[ext_resource type="PackedScene" uid="uid://gs4pfxwug7kg" path="res://Ui/Lobby/Lobby Browser/lobby_browser.tscn" id="3_y7h0k"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_4es5y"]

[node name="PreLobby" type="Control" node_paths=PackedStringArray("lobby_creator", "lobby_browser")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1135d")
lobby_creator = NodePath("CenterContainer/VBoxContainer/TabContainer/LobbyCreator")
lobby_browser = NodePath("CenterContainer/VBoxContainer/TabContainer/LobbyBrowser")

[node name="CenterContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 2

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit
"

[node name="Control" type="Control" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="JoinButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Join Lobby"

[node name="HBoxContainer2" type="HBoxContainer" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CreateButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Create Lobby"

[node name="SettingsButton" type="Button" parent="CenterContainer/PanelContainer/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
disabled = true
text = "Settings"
icon_alignment = 1
expand_icon = true

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 2

[node name="TabContainer" type="TabContainer" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxEmpty_4es5y")
current_tab = 1
tabs_visible = false
deselect_enabled = true

[node name="LobbyCreator" parent="CenterContainer/VBoxContainer/TabContainer" instance=ExtResource("3_4es5y")]
visible = false
layout_mode = 2
metadata/_tab_index = 0

[node name="LobbyBrowser" parent="CenterContainer/VBoxContainer/TabContainer" instance=ExtResource("3_y7h0k")]
layout_mode = 2

[node name="CreateLobbyButton" parent="CenterContainer/VBoxContainer/TabContainer/LobbyBrowser/MarginContainer/HBoxContainer/VBoxContainer" index="2"]
disabled = false

[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer/JoinButton" to="." method="_on_join_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2/CreateButton" to="." method="_on_create_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/MarginContainer/VBoxContainer/SettingsButton" to="." method="_on_connection_settings_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/TabContainer/LobbyBrowser/MarginContainer/HBoxContainer/VBoxContainer/CreateLobbyButton" to="." method="_on_create_lobby_button_pressed"]

[editable path="CenterContainer/VBoxContainer/TabContainer/LobbyBrowser"]
